More small fixes, bump assets link to /77/
- Make things in truncated post header clickable.
- Show num post summarized.
- Show summarize button even if not logged in.

--- a/client/app/debiki-play.styl
+++ b/client/app/debiki-play.styl
@@ -93,6 +93,11 @@ del
     max-height: 120px;  // also see height in ReactStore.ts [5E7PKW2]
     overflow: hidden;
 
+  // Make things in the header clickable in spite of .dw-x-cover.
+  > .dw-p-hd
+    z-index: 2;
+    position: relative;
+
 .dw-x-show
   position: relative;
   bottom: 10px;
